2007-01-23  Martin Rudalics  <rudalics@gmx.at>

	* help-fns.el (describe-variable): Don't suppress display of
	buffer local value when the value is "large".

2007-01-22  Kim F. Storm  <storm@cua.dk>

	* ido.el (ido-active): Add xemacs test from ido-minibuffer-setup.
	(ido-initiate-auto-merge, ido-exhibit, ido-minibuffer-setup)
	(ido-tidy): Use ido-active.

2007-01-22  Chris Moore  <christopher.ian.moore@gmail.com>  (tiny change)

	* hexl.el (hexl-mode-exit): Add missing quote.

2007-01-22  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* term/mac-win.el (mac-keyboard-modifier-mask-alist): New constant.
	(mac-ae-keyboard-modifiers): New function.
	(mac-handle-toolbar-switch-mode): Use it.
	(mac-dnd-handle-drag-n-drop-event): Likewise.  Set action to `copy'
	if keyboard modifiers on drop contain option key.
	(mac-dnd-drop-data): Add optional argument `action'.
	(special-event-map): Remove binding for M-drag-n-drop.

2007-01-21  Guanpeng Xu  <herberteuler@hotmail.com>

	* add-log.el (add-log-current-defun): Use CC Mode functions to
	find the beginning and end of a defun.

2007-01-21  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-var-create-regexp)
	(gdb-var-create-handler): Handle value field in GDB output of
	-var-create.
	(gdb-max-frames): New variable.
	(gdb-stack-buffer, gdb-frames-select): Use it.
	(gdb-info-stack-custom): Help user customize gdb-max-frames,
	if necessary.
	(gdb-get-frame-number): Simplify.

2007-01-21  Glenn Morris  <rgm@gnu.org>

	* net/tramp.el (tramp-perl-encode, tramp-perl-decode):
	Update copyrights.

2007-01-21  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-cmds.el (c-where-wrt-brace-construct): Correct the
	handling of K&R stuff.

2007-01-21  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* textmodes/bibtex.el (bibtex-files): Fix customization type.

2007-01-21  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* ps-print.el: Handle frame parameters (background and/or foreground